[package]
name = "leetcodedaily"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.102"
chrono = "0.4.44"
cranpose-core = "0.0.51"
cranpose-foundation = "0.0.51"
image = "0.25.10"
imageproc = "0.26.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.6.1"
cranpose = { version = "0.0.51", default-features = false, features = ["desktop", "renderer-wgpu"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
cranpose = { version = "0.0.51", default-features = false, features = ["web", "renderer-wgpu"] }
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3", features = ["Window"] }
