[package]
name = "leetcodedaily"
version = "0.1.6"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.102"
chrono = "0.4.44"
cranpose-core = "0.0.59"
cranpose-foundation = "0.0.59"
image = "0.25.10"
imageproc = "0.26.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.6.1"
cranpose = { version = "0.0.59", default-features = false, features = ["desktop", "renderer-wgpu"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
cranpose = { version = "0.0.59", default-features = false, features = ["web", "renderer-wgpu"] }
js-sys = "0.3"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Clipboard",
    "ClipboardItem",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlElement",
    "Navigator",
    "Node",
    "Url",
    "Window",
] }
